--- a/src/Title.css
+++ b/src/Title.css
@@ -1,33 +1,36 @@
 body {
-    background-color: #020309;
+    background-color: white;
 }
 
 .Title {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100vh;
     color: white;
+    background-image: url('./bkg.jpg');
+    background-repeat: none;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 .title-text {
     margin: 0px;
-    font-family: 'Caveat', cursive;
+    position: relative;
+    font-family: 'Archivo Black', sans-serif;
     font-size: 4rem;
-}
-
-.horizontal-line {
-    border: 2px solid yellow;
-    border-radius: 5px;
-    width: 10%;
+    margin-left: 20px;
+    color: white;
 }
 
 .subtitle-text {
-    font-size: 1.5rem;
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 1.3rem;
+    position: relative;
+    font-family: 'Abel', sans-serif;
     margin: 5px;
+    margin-left: 20px;
 }
