--- a/src/Header.css
+++ b/src/Header.css
@@ -1,20 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&display=swap');
+
 .Header {
-    width: 100%;
-    height: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: 60px;
     background-color: white;
-    position: fixed;
-    display: block;
-    top: 0;
+    position: relative;
+    margin-bottom: 10px;
+    margin-top: 0; 
+    border-radius: 7px;
 }
 
 .header-links {
     position: relative;
-    float: right;
+    text-align: center;
     margin-right: 40px;
-    margin-top: 20px;
+    padding-top: 12px;
 }
 
 li {
     display: inline-block;
-    padding: 10px;
+    padding: 9px;
+    font-family: 'Baloo Bhaijaan 2', cursive;
+    font-size: 1rem;
 }
