--- a/src/Title.css
+++ b/src/Title.css
@@ -1,36 +1,47 @@
-body {
-    background-color: white;
-}
-
 .Title {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 100vh;
-    color: white;
-    background-image: url('./bkg.jpg');
-    background-repeat: none;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 .title-text {
     margin: 0px;
+    margin-top: 50px;
     position: relative;
     font-family: 'Archivo Black', sans-serif;
-    font-size: 4rem;
-    margin-left: 20px;
-    color: white;
+    font-size: 3rem;
+    margin-left: 30px;
+    color: black;
 }
 
 .subtitle-text {
-    font-size: 1.3rem;
+    font-size: 1rem;
+    color: black;
     position: relative;
     font-family: 'Abel', sans-serif;
     margin: 5px;
-    margin-left: 20px;
+    margin-left: 30px;
+    margin-top: 0px !important;
+}
+
+.my-portrait {
+    position: absolute;
+    width: 200px;
+    right: 100px;
+    top: 15px;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+.paragraph-aboutMe {
+    margin-top: 50px !important;
+    margin: 30px;
+    font-family: 'Rubik', sans-serif;
 }
